<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:minHeight="360dp"
    android:minWidth="240dp"
    android:orientation="vertical" >

    <Button
        android:id="@+id/claim_returnEmail"
        style="?android:attr/buttonStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="2dp"
        android:layout_marginBottom="1dp"
        android:layout_weight="1"
        android:background="@drawable/button_picture"
        android:text="@string/claim_return_email"
        android:textColor="@color/white"
        android:textSize="24sp" />

    <Button
        android:id="@+id/claim_returnToReturn"
        style="?android:attr/buttonStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="2dp"
        android:layout_marginBottom="1dp"
        android:layout_weight="1"
        android:background="@drawable/button_picture"
        android:text="@string/claim_return_toReturn"
        android:textColor="@color/white"
        android:textSize="24sp" />

    <Button
        android:id="@+id/claim_returnApprove"
        style="?android:attr/buttonStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="2dp"
        android:layout_marginBottom="1dp"
        android:layout_weight="1"
        android:background="@drawable/button_picture"
        android:text="@string/claim_return_approve"
        android:textColor="@color/white"
        android:textSize="24sp" />

    <Button
        android:id="@+id/claim_returnDelete"
        style="?android:attr/buttonStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="2dp"
        android:layout_weight="1"
        android:background="@drawable/button_picture"
        android:text="@string/claim_return_delete"
        android:textColor="@color/white"
        android:textSize="24sp" />

</LinearLayout>