<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/skyblue"
    android:orientation="vertical" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="5"
        android:focusable="true"
		android:focusableInTouchMode="true"
        android:orientation="horizontal" >

        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:text="@string/activity_claim_title"
            android:textColor="@color/white"
            android:textSize="24sp" />
    </LinearLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" >

            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="center|left"
                android:text="@string/activity_claim_start_date"
                android:textColor="@color/white"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/startDate_view"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_margin="5dp"
                android:layout_weight="1"
                android:background="@color/white"
                android:gravity="center"
                android:hint="@string/activity_claim_date_format"
                android:textColor="@color/lightgray"
                android:textSize="18sp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="center|left"
                android:text="@string/activity_claim_end_date"
                android:textColor="@color/white"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/endDate_view"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_margin="5dp"
                android:layout_weight="1"
                android:background="@color/white"
                android:gravity="center"
                android:hint="@string/activity_claim_date_format"
                android:textColor="@color/lightgray"
                android:textSize="18sp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="center|left"
                android:text="@string/activity_claim_destination"
                android:textColor="@color/white"
                android:textSize="18sp" />

            <EditText
                android:id="@+id/claim_destination"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_margin="5dp"
                android:layout_weight="1"
                android:background="@color/white"
                android:gravity="center"
                android:padding="5dp"
                android:textSize="18sp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="center|left"
                android:text="@string/activity_claim_reason"
                android:textColor="@color/white"
                android:textSize="18sp" />

            <EditText
                android:id="@+id/claim_description"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_margin="5dp"
                android:layout_weight="1"
                android:background="@color/white"
                android:gravity="left"
                android:lines="11"
                android:padding="5dp"
                android:textSize="18sp" />
        </LinearLayout>
    </ScrollView>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="5"
        android:orientation="horizontal" >

        <Button
            android:id="@+id/new_claim_submit"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@drawable/button_picture"
            android:gravity="center"
            android:text="@string/activity_claim_submit_button"
            android:textColor="@color/white"
            android:textSize="15sp" />

        <TextView
            android:layout_width="1dp"
            android:layout_height="match_parent"
            android:background="@color/white" />

        <Button
            android:id="@+id/new_claim_cancel"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@drawable/button_picture"
            android:gravity="center"
            android:text="@string/activity_claim_cancel_button"
            android:textColor="@color/white"
            android:textSize="15sp" />
    </LinearLayout>

</LinearLayout>