<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:orientation="vertical" >
    
      <LinearLayout
        android:background="@color/skyblue"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:focusable="true"
        android:focusableInTouchMode="true"
        android:layout_weight="100"
        android:orientation="horizontal" >

        <TextView
            android:id="@+id/claim_email_title"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:text="@string/claim_email_title"
            android:textColor="@color/white"
            android:textSize="30sp" />

    </LinearLayout>
    
	    <LinearLayout
	        android:layout_width="match_parent"
	        android:layout_height="match_parent"
	        android:layout_weight="20"
	        android:gravity="center|bottom"
	        android:background="@color/white"
	        android:orientation="vertical" >
			
	        
	        <TextView 
	            	android:layout_width="wrap_content"
				    android:layout_height="wrap_content"
	            	android:gravity="bottom"
					android:layout_margin="4dp"
					android:text = "@string/claim_email_address"
	            	android:textSize = "20sp"
	            	android:textColor="@color/darkviolet"
	            	
	            
	            
	            />
	        
	        <EditText
			        android:id="@+id/claim_email_addressView"
				    android:layout_width="match_parent"
				    android:layout_height="wrap_content"
				    android:gravity="center"
					android:layout_margin="6dp" 
					android:textSize="16sp"
					android:hint="@string/claim_email_enter"
					android:inputType="textEmailAddress"/>

	        <ScrollView
	            android:id="@+id/scrollView_email"
	            android:layout_width="match_parent"
	            android:layout_height="match_parent" >

	            <LinearLayout
	                android:layout_width="match_parent"
	                android:layout_height="wrap_content"
	                android:orientation="vertical" >
				
	                <TextView
	                    android:id="@+id/claim_email_Preview"
	                    android:layout_width="match_parent"
	                    android:layout_height="match_parent"/>
	                

	            </LinearLayout>
	        </ScrollView>
	        		
    </LinearLayout>
    
    <LinearLayout
        android:background="@color/skyblue"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="100"
        android:orientation="horizontal" >

        
        
        <Button
            android:id="@+id/claim_email_done"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@drawable/button_picture"
            android:text="@string/claim_email_done"
            android:textColor="@color/white"
            android:textSize="20sp" />

        <Button
            android:id="@+id/claim_email_cancel"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@drawable/button_picture"
            android:text="@string/claim_email_cancel"
            android:textSize="20sp" 
            android:textColor="@color/white" />
        
    </LinearLayout>
    

</LinearLayout>