<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/skyblue"
    android:orientation="vertical" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="5"
        android:focusable="true"
        android:focusableInTouchMode="true"
        android:orientation="horizontal" >

        <TextView
            android:id="@+id/expense_title"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:text="@string/activity_expense_title"
            android:textColor="@color/white"
            android:textSize="24sp" />
    </LinearLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:orientation="vertical" >

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="2"
                android:orientation="horizontal" >

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:text="@string/activity_expense_date"
                    android:textColor="@color/white"
                    android:textSize="18sp" />

                <TextView
                    android:id="@+id/expense_category_textview"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:text="@string/activity_expense_category"
                    android:textColor="@color/white"
                    android:textSize="18sp" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="2"
                android:orientation="horizontal" >

                <TextView
                    android:id="@+id/expense_date"
                    android:layout_width="match_parent"
                    android:layout_height="55dp"
                    android:layout_margin="5dp"
                    android:layout_weight="1"
                    android:background="@color/white"
                    android:gravity="center"
                    android:hint="@string/activity_claim_date_format"
                    android:textColor="@color/lightgray"
                    android:textSize="15sp" />

                <Spinner
                    android:id="@+id/expense_category_spinner"
                    android:layout_width="match_parent"
                    android:layout_height="60dp"
                    android:layout_margin="5dp"
                    android:layout_weight="1"
                    android:dropDownWidth="150dp"
                    android:spinnerMode="dropdown"
                    android:textSize="15sp" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="2"
                android:orientation="horizontal" >

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:text="@string/activity_expense_amount"
                    android:textColor="@color/white"
                    android:textSize="18sp" />

                <TextView
                    android:id="@+id/expense_currency_textview"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:text="@string/activity_expense_currency"
                    android:textColor="@color/white"
                    android:textSize="18sp" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="2"
                android:orientation="horizontal" >

                <EditText
                    android:id="@+id/amount_edit"
                    android:layout_width="match_parent"
                    android:layout_height="55dp"
                    android:layout_margin="5dp"
                    android:layout_weight="1"
                    android:background="@color/white"
                    android:gravity="center"
                    android:inputType="number"
                    android:focusable="false"
                    android:textSize="15sp" >

                    <requestFocus />
                </EditText>

                <Spinner
                    android:id="@+id/expense_currency_spinner"
                    android:layout_width="match_parent"
                    android:layout_height="60dp"
                    android:layout_margin="5dp"
                    android:layout_weight="1"
                    android:dropDownWidth="150dp"
                    android:spinnerMode="dropdown"
                    android:textColor="@color/black"
                    android:textSize="20sp" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:orientation="vertical" >

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:text="@string/activity_expense_description"
                    android:textColor="@color/white"
                    android:textSize="18sp" />

                <EditText
                    android:id="@+id/expense_description"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_margin="5dp"
                    android:layout_weight="1"
                    android:maxLength="24"
                    android:background="@color/white"
                    android:gravity="start"
                    android:lines="11"
                    android:padding="5dp"
                    android:textSize="18sp" />
            </LinearLayout>
        </LinearLayout>
    </ScrollView>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="5"
        android:orientation="horizontal" >

        <Button
            android:id="@+id/new_expense_submit"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@drawable/button_picture"
            android:gravity="center"
            android:text="@string/activity_expense_submit_button"
            android:textColor="@color/white"
            android:textSize="15sp" />

        <TextView
            android:layout_width="1dp"
            android:layout_height="match_parent"
            android:background="@color/white" />

        <Button
            android:id="@+id/new_expense_cancel"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@drawable/button_picture"
            android:gravity="center"
            android:text="Cancel"
            android:textColor="@color/white"
            android:textSize="15sp" />
    </LinearLayout>

</LinearLayout>